# lunabotics_ros2

src/nav2config/: CMakeLists.txt  amcl.yaml  package.xml
src/nav2config/config/: navigation.yaml
src/nav2config/launch/: map_launch.py  navigation_launch.py  slamnav_launch.py
src/nav2config/maps/: my_map1.pgm  my_map1.yaml
src/nav2config/scripts/: serial_node.py
